--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 publishing {
     publications {
         mavenJava(MavenPublication){
+            artifactId 'protocolrouter'
             from components.java
         }
     }
